--- a/style.css
+++ b/style.css
@@ -22,17 +22,18 @@ header{
     margin-bottom: 2rem;
 }
 
-.horas{
+.hours-bar{
+    --total-hours: 100;
     max-width: 600px;
     display: flex;
     gap: 1rem;
     width: 100%;
     
+    
 
-    & .barra-horas{
+    & .hours-bar__bar{
         --height: 1.25rem;
         --hours: 76;
-        --totalHours: 125;
         position: relative;
         width: 100%;
         height: var(--height);
@@ -43,7 +44,7 @@ header{
         &::before{
             content: "";
             display: block;
-            width: calc((var(--hours)/var(--totalHours))*100%);
+            width: calc((var(--hours)/var(--total-hours))*100%);
             height: 100%;
             background-color: rgb(13, 197, 59);
             border-radius: inherit;
@@ -54,7 +55,7 @@ header{
             content: counter(mi-contador);
             position: absolute;
             top: -3rem;
-            left: calc((var(--hours)/var(--totalHours))*100%);
+            left: calc((var(--hours)/var(--total-hours))*100%);
             font-size: 2.5rem;
             margin-left: -1.75rem;
         }
