--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ header{
 
 .hours-bar{
     --total-hours: 100;
+    --work-time: 0;
     max-width: 600px;
     display: flex;
     gap: 1rem;
@@ -41,23 +42,21 @@ header{
         border-radius: calc(var(--height)/2);
         background-color: #e7e7e7;
 
+        & .work-time{
+            position: absolute;
+            top: -3rem;
+            left: calc((var(--work-time)/var(--total-hours))*100%);
+            font-size: 2.5rem;
+            margin-left: -1.75rem;
+        }
+
         &::before{
             content: "";
             display: block;
-            width: calc((var(--hours)/var(--total-hours))*100%);
+            width: calc((var(--work-time)/var(--total-hours))*100%);
             height: 100%;
             background-color: rgb(13, 197, 59);
             border-radius: inherit;
-        }
-
-        &::after{
-            counter-reset: mi-contador var(--hours);
-            content: counter(mi-contador);
-            position: absolute;
-            top: -3rem;
-            left: calc((var(--hours)/var(--total-hours))*100%);
-            font-size: 2.5rem;
-            margin-left: -1.75rem;
         }
     }
 
